src/objects/Accounting_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Cancellation_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancellation Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entry_Text__c</fullName>
        <label>Entry Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Canceled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Posted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unposted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Accounting Entries</relationshipLabel>
        <relationshipName>Accounting_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value_Date__c</fullName>
        <label>Value Date</label>
        <type>Date</type>
    </fields>
    <label>Accounting Entry</label>
    <nameField>
        <displayFormat>Rel-{000000000}</displayFormat>
        <label>Accounting Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>